Fix some issues with code block overflow

--- a/_sass/base/_elements.scss
+++ b/_sass/base/_elements.scss
@@ -1,7 +1,6 @@
 .highlight {
   display: block;
   max-width: 100%;
-  overflow-x: auto;
 }
 
 blockquote {
