--- a/_sass/modules/_code-block.scss
+++ b/_sass/modules/_code-block.scss
@@ -1,3 +1,7 @@
 [class^=language-] {
   overflow: auto;
+  & > .highlight {
+    padding: 1rem;
+    overflow-x: auto;
+  }
 }
